--- a/packages/many-chat-rooms/frontend/package.json
+++ b/packages/many-chat-rooms/frontend/package.json
@@ -13,8 +13,8 @@
         "deploy": "yarn build && NODE_DEBUG=gh-pages gh-pages -d dist"
     },
     "dependencies": {
-        "peerbit": "^1.1.7",
-        "@peerbit/document": "^2.0.0",
+        "peerbit": "^1",
+        "@peerbit/document": "^2",
         "@peerbit/example-many-chat-rooms": "^0.0.1",
         "@peerbit/react": "*",
         "react": "^18.2.0",
@@ -31,8 +31,7 @@
         "@types/react-dom": "^18.0.9",
         "@vitejs/plugin-react": "^4.0.3",
         "typescript": "^5.1.3",
-        "vite": "^4.4.4",
-        "gh-pages": "^4.0.0"
+        "vite": "^4.4.7"
     },
     "browserslist": {
         "production": [
