--- a/packages/live-streaming/frontend/public/manifest.json
+++ b/packages/live-streaming/frontend/public/manifest.json
@@ -1,13 +1,7 @@
 {
     "short_name": "Livestream",
     "name": "Livestream",
-    "icons": [
-        {
-            "src": "favicon.svg",
-            "sizes": "64x64 32x32 24x24 16x16",
-            "type": "image/svg"
-        }
-    ],
+    "icons": [],
     "start_url": ".",
     "display": "standalone",
     "theme_color": "#000000",
