--- a/packages/social-media-app/app-service/package.json
+++ b/packages/social-media-app/app-service/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@dao-xyz/app-service",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "author": "dao.xyz",
     "repository": "https://github.com/@dao-xyz/peerbit-examples",
     "license": "Apache-2.0",
@@ -38,9 +38,9 @@
         "typescript": "^5.1.3"
     },
     "dependencies": {
-        "uuid": "^9.0.0",
-        "parse5": "^7.1.2",
         "@peerbit/document": "^3",
-        "peerbit": "^1"
+        "parse5": "^7.1.2",
+        "peerbit": "^1",
+        "uuid": "^9.0.0"
     }
 }
