--- a/packages/social-media-app/frontend/package.json
+++ b/packages/social-media-app/frontend/package.json
@@ -14,11 +14,12 @@
         "deploy": "yarn build && NODE_DEBUG=gh-pages gh-pages -d dist"
     },
     "dependencies": {
+        "@dao-xyz/app-service": "^0.0.4",
         "@dao-xyz/social": "^0.0.2",
         "react-grid-layout-next": "^2.2.0",
         "@peerbit/peer-names": "^0.0.1",
         "iframe-resizer": "^4.3.4",
-        "peerbit": "^1",
+        "peerbit": "^2",
         "@peerbit/react": "*",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
