--- a/packages/file-share/frontend/package.json
+++ b/packages/file-share/frontend/package.json
@@ -22,7 +22,9 @@
         "react-use": "^17.4.0",
         "react-router-dom": "^6.8.0",
         "fast-diff": "^1.3.0",
-        "react-icons": "^4.10.1"
+        "react-icons": "^4.10.1",
+        "@radix-ui/react-toast": "^1.1.4",
+        "@radix-ui/react-toggle": "^1.0.3"
     },
     "devDependencies": {
         "@types/react": "^18.0.26",
