--- a/packages/react-utils/package.json
+++ b/packages/react-utils/package.json
@@ -24,7 +24,7 @@
     "dependencies": {
         "@emotion/react": "^11.10.5",
         "@emotion/styled": "^11.10.5",
-        "@libp2p/webrtc": "^2.0.11",
+        "@libp2p/webrtc": "^3.1.9",
         "@mui/icons-material": "^5.10.16",
         "@mui/material": "^5.10.13",
         "@peerbit/proxy-window": "^1.0.1",
@@ -35,7 +35,8 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.8.0",
-        "react-use": "^17.4.0"
+        "react-use": "^17.4.0",
+        "@chainsafe/libp2p-yamux": "^5.0.0"
     },
     "devDependencies": {
         "@babel/plugin-proposal-private-property-in-object": "^7.18.6",
