--- a/packages/text-document/frontend/package.json
+++ b/packages/text-document/frontend/package.json
@@ -14,6 +14,8 @@
         "deploy": "yarn build && NODE_DEBUG=gh-pages gh-pages -d dist"
     },
     "dependencies": {
+        "react-textarea-autosize": "^8.5.3",
+        "@dao-xyz/app-sdk": "^0.0.1",
         "@peerbit/string": "^3",
         "peerbit": "^2",
         "@peerbit/react": "*",
