--- a/packages/react-utils/package.json
+++ b/packages/react-utils/package.json
@@ -22,6 +22,7 @@
         "react": "*"
     },
     "dependencies": {
+        "detectincognitojs": "^1.3.0",
         "@emotion/react": "^11.10.5",
         "@emotion/styled": "^11.10.5",
         "@libp2p/webrtc": "^3.1.9",
