--- a/packages/social-media-app/app-sdk/package.json
+++ b/packages/social-media-app/app-sdk/package.json
@@ -18,34 +18,11 @@
     "publishConfig": {
         "access": "public"
     },
-    "peerDependencies": {
-        "react": "*"
-    },
     "dependencies": {
-        "@emotion/react": "^11.10.5",
-        "@emotion/styled": "^11.10.5",
-        "@libp2p/webrtc": "^3.1.9",
-        "@mui/icons-material": "^5.10.16",
-        "@mui/material": "^5.10.13",
-        "@peerbit/proxy-window": "^1.0.1",
-        "@types/react": "^18.0.25",
-        "@types/react-dom": "^18.0.8",
-        "path-browserify": "^1.0.1",
-        "peerbit": "^2",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-router-dom": "^6.16.0",
-        "react-use": "^17.4.0",
-        "@chainsafe/libp2p-yamux": "^5.0.0"
+        "@peerbit/time": "^1.0.4",
+        "uuid": "^9.0.1"
     },
-    "devDependencies": {
-        "@babel/plugin-proposal-private-property-in-object": "^7.18.6",
-        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-        "@babel/plugin-transform-typescript": "^7.20.2",
-        "@types/sinon": "^10.0.13",
-        "node-localstorage": "^2.2.1",
-        "sinon": "^15.0.1"
-    },
+    "devDependencies": {},
     "scripts": {
         "clean": "shx rm -rf lib/*",
         "build": "yarn clean && tsc -p tsconfig.json",
