--- a/packages/file-share/frontend/package.json
+++ b/packages/file-share/frontend/package.json
@@ -15,7 +15,7 @@
     },
     "dependencies": {
         "@peerbit/please-lib": "^0.0.7",
-        "peerbit": "^3",
+        "peerbit": "^4",
         "@peerbit/react": "*",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -23,15 +23,25 @@
         "react-router-dom": "^6.16.0",
         "fast-diff": "^1.3.0",
         "react-icons": "^4.10.1",
+        "faker": "5.5.3",
         "@radix-ui/react-toast": "^1.1.4",
-        "@radix-ui/react-toggle": "^1.0.3"
+        "@radix-ui/react-toggle": "^1.0.3",
+        "@radix-ui/react-slider": "^1.1.2",
+        "@radix-ui/react-popover": "^1.0.7",
+        "@radix-ui/react-switch": "^1.0.3",
+        "@radix-ui/react-tabs": "^1.0.4",
+        "@radix-ui/react-progress": "^1.0.3",
+        "chartjs-chart-graph": "^4.2.7",
+        "chart.js": "^4.4.1",
+        "chartjs-plugin-datalabels": "^2.2.0"
     },
     "devDependencies": {
+        "@types/faker": "5.5.9",
         "@types/react": "^18.2.46",
         "@types/react-dom": "^18.2.18",
         "@vitejs/plugin-react": "^4",
         "typescript": "^5.3.3",
-        "vite": "^5.0.10",
+        "vite": "^5.0.12",
         "tailwindcss": "^3.3.3",
         "postcss": "^8.4.26",
         "autoprefixer": "^10.4.14"
