--- a/packages/react-debug-utils/package.json
+++ b/packages/react-debug-utils/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "@dao-xyz/app-sdk",
-    "version": "0.0.2",
+    "name": "@peerbit/react-debug",
+    "version": "0.0.5",
     "homepage": "https://dao-xyz.github.io/peerbit-examples",
     "module": "lib/esm/index.js",
     "types": "lib/esm/index.d.ts",
@@ -22,16 +22,10 @@
         "react": "*"
     },
     "dependencies": {
-        "@chainsafe/libp2p-yamux": "^6",
-        "@emotion/react": "^11.10.5",
-        "@emotion/styled": "^11.10.5",
-        "@mui/icons-material": "^5.10.16",
-        "@mui/material": "^5.10.13",
-        "@types/react": "^18.0.25",
+        "@types/react": "^18.2.46",
         "@types/react-dom": "^18.2.18",
-        "path-browserify": "^1.0.1",
-        "@peerbit/proxy-window": "^3",
         "peerbit": "^4",
+        "@peerbit/document": "^6",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.16.0",
@@ -40,15 +34,13 @@
     "devDependencies": {
         "@babel/plugin-proposal-private-property-in-object": "^7.18.6",
         "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-        "@babel/plugin-transform-typescript": "^7.20.2",
-        "@types/sinon": "^17.0.2",
-        "node-localstorage": "^2.2.1",
-        "sinon": "^17.0.1"
+        "@babel/plugin-transform-typescript": "^7.20.2"
     },
     "scripts": {
         "clean": "shx rm -rf lib/*",
         "build": "yarn clean && tsc -p tsconfig.json",
-        "test": "jest"
+        "test": "jest",
+        "postbuild": "echo '{\"type\":\"module\"} ' | node ../../node_modules/.bin/json > lib/esm/package.json"
     },
     "eslintConfig": {
         "extends": [
