--- a/packages/file-share/frontend/package.json
+++ b/packages/file-share/frontend/package.json
@@ -44,7 +44,8 @@
         "vite": "^5.0.12",
         "tailwindcss": "^3.3.3",
         "postcss": "^8.4.26",
-        "autoprefixer": "^10.4.14"
+        "autoprefixer": "^10.4.14",
+        "vite-plugin-static-copy": "^1.0.1"
     },
     "browserslist": {
         "production": [
