--- a/packages/blog-platform/cli/package.json
+++ b/packages/blog-platform/cli/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@peerbit/blog",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "author": "dao.xyz",
     "repository": "https://github.com/@dao-xyz/peerbit-examples",
     "license": "Apache-2.0",
@@ -37,13 +37,13 @@
         "watch": "nodemon"
     },
     "devDependencies": {
-        "typescript": "^5.3.3",
-        "@types/inquirer": "^9"
+        "@types/inquirer": "^9",
+        "typescript": "^5.3.3"
     },
     "dependencies": {
-        "@peerbit/blog-sdk": "^0.0.1",
         "@inquirer/editor": "^2",
+        "@inquirer/input": "^2",
         "@inquirer/select": "^2",
-        "@inquirer/input": "^2"
+        "@peerbit/blog-sdk": "^0.0.2"
     }
 }
