--- a/packages/file-share/frontend/tsconfig.json
+++ b/packages/file-share/frontend/tsconfig.json
@@ -3,18 +3,19 @@
         "target": "es2022",
         "useDefineForClassFields": true,
         "lib": ["DOM", "DOM.Iterable", "Es2022"],
-        "module": "es2022",
-        "moduleResolution": "node",
+        "allowJs": false,
+        "skipLibCheck": true,
+        "esModuleInterop": false,
         "allowSyntheticDefaultImports": true,
         "strict": false,
         "forceConsistentCasingInFileNames": true,
+        "module": "es2022",
+        "moduleResolution": "node",
         "resolveJsonModule": true,
         "isolatedModules": true,
         "experimentalDecorators": true,
         "noEmit": true,
-        "jsx": "react-jsx",
-        "strictFunctionTypes": true,
-        "skipLibCheck": false
+        "jsx": "react-jsx"
     },
     "include": ["src"],
     "references": [
