--- a/packages/social-media-app/frontend/package.json
+++ b/packages/social-media-app/frontend/package.json
@@ -25,7 +25,7 @@
         "react-dom": "^18.2.0",
         "react-use": "^17.4.0",
         "react-router-dom": "^6.27.0",
-        "@yaireo/tagify": "^4.27.0",
+        "@yaireo/tagify": "4.27.0",
         "react-icons": "^5.3.0",
         "@radix-ui/react-toggle": "^1.0.3",
         "@headlessui/react": "^1.7.15",
