--- a/packages/live-streaming/frontend/package.json
+++ b/packages/live-streaming/frontend/package.json
@@ -29,6 +29,7 @@
         "@radix-ui/react-select": "^2.1.2",
         "@radix-ui/react-dropdown-menu": "^2.1.2",
         "@radix-ui/react-icons": "^1.3.0",
+        "@radix-ui/react-tooltip": "^1.1.8",
         "react-router-dom": "^6.27.0",
         "p-queue": "^8.0.1"
     },
