--- a/packages/live-streaming/frontend/package.json
+++ b/packages/live-streaming/frontend/package.json
@@ -20,6 +20,7 @@
         "peerbit": "^4",
         "@peerbit/document": "^9",
         "@peerbit/react": "*",
+        "@peerbit/video-lib": "^0.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-use": "^17.4.0",
