--- a/packages/live-streaming/frontend/package.json
+++ b/packages/live-streaming/frontend/package.json
@@ -27,15 +27,16 @@
         "react-icons": "^5.3.0",
         "@radix-ui/react-slider": "^1.2.1",
         "@radix-ui/react-dialog": "^1.1.2",
-        "@radix-ui/react-select": "^2.1.2",
-        "@radix-ui/react-dropdown-menu": "^2.1.2",
+        "@radix-ui/react-select": "^2.1.6",
+        "@radix-ui/react-dropdown-menu": "^2.1.6",
         "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-tooltip": "^1.1.8",
+        "@radix-ui/react-toast": "^1.2.6",
         "react-router-dom": "^6.27.0",
         "p-queue": "^8.0.1"
     },
     "devDependencies": {
-        "@types/audioworklet": "^0.0.60",
+        "@types/audioworklet": "^0.0.70",
         "@types/dom-mediacapture-transform": "^0.1.10",
         "@webgpu/types": "^0.1.44",
         "@types/dom-webcodecs": "^0.1.11",
