--- a/packages/social-media-app/frontend/package.json
+++ b/packages/social-media-app/frontend/package.json
@@ -16,31 +16,32 @@
     "dependencies": {
         "@dao-xyz/app-service": "^0",
         "@dao-xyz/social": "^0",
-        "react-grid-layout-next": "^2.2.0",
+        "@headlessui/react": "^2.2.0",
         "@peerbit/peer-names": "^0.0.1",
+        "@peerbit/react": "*",
+        "@radix-ui/react-toggle": "^1.0.3",
+        "axios": "^1.4.0",
         "iframe-resizer": "^5",
         "peerbit": "^4",
-        "@peerbit/react": "*",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-use": "^17.4.0",
-        "react-router-dom": "^6.27.0",
+        "react-grid-layout-next": "^2.2.0",
         "react-icons": "^5.5.0",
-        "@radix-ui/react-toggle": "^1.0.3",
-        "@headlessui/react": "^2.2.0",
-        "axios": "^1.4.0",
-        "marked-react": "^3"
+        "react-markdown": "^10.1.0",
+        "react-router-dom": "^6.27.0",
+        "react-use": "^17.4.0",
+        "remark-gfm": "^4.0.1"
     },
     "devDependencies": {
+        "@peerbit/vite": "^1",
         "@types/react": "^18.2.46",
         "@types/react-dom": "^18.2.18",
         "@vitejs/plugin-react": "^4",
-        "typescript": "^5.6.3",
-        "vite": "^6.0.6",
-        "tailwindcss": "^3.4.13",
-        "postcss": "^8.4.47",
         "autoprefixer": "^10.4.20",
-        "@peerbit/vite": "^1"
+        "postcss": "^8.4.47",
+        "tailwindcss": "^3.4.13",
+        "typescript": "^5.6.3",
+        "vite": "^6.0.6"
     },
     "browserslist": {
         "production": [
